--- a/test/public/test.html
+++ b/test/public/test.html
@@ -11,36 +11,10 @@
 <script src="https://cdn.rawgit.com/Automattic/expect.js/0.3.1/index.js"></script>
 <script src="https://cdn.rawgit.com/mochajs/mocha/2.2.5/mocha.js"></script>
 
-<script>mocha.setup('bdd')</script>
+<!--<script>mocha.setup('bdd')</script>-->
 <script src="test.js"></script>
 <script>
-if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('delta_cache_ws.js').then(function(registration) {
-        if (registration.active === null) {
-            //location.reload();
-        }
-        console.log(':^)', registration);
 
-    setInterval(getDynamic, 5000);
-
-    }).catch(function(err) {
-        console.log(':^(', err);
-    });
-}
-else {
-    console.log('service worker not supported');
-}
-
-function getDynamic() {
-    /*$.ajax('https://localhost:8000/dynamic.html').then((response, status, jqXHR) => {
-        console.log(response);
-    });*/
-}
-
-
-mocha.checkLeaks();
-mocha.globals(['jQuery']);
-mocha.run();
 </script>
 </body>
 </html>
