add no delta test

--- a/test/public/test.html
+++ b/test/public/test.html
@@ -5,7 +5,7 @@
     <link href="https://cdn.rawgit.com/mochajs/mocha/2.2.5/mocha.css" rel="stylesheet" />
 </head>
 <body>
-<a href="javascript:window.open('','_self').close();">close</a>
+<a href="javascript:window.open('','_self').close();"><button>Close</button></a>
 <div id="mocha"></div>
 
 <script src="https://code.jquery.com/jquery-3.1.0.js" integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk=" crossorigin="anonymous"></script>
