added X-Delta-Length header onto requests returned to browser; added demo

--- a/demo/public/demo.html
+++ b/demo/public/demo.html
@@ -13,29 +13,25 @@
           crossorigin="anonymous">
 </head>
 <body>
-    <div id="page"></div>
-    <h2>Delta Cache Demo</h2>
-    <hr>
-    <p>In this demo, the browser forms a connection with a peer browser, if available, and downloads the video data directly from that peer. A signaling server negotiates the connections.</p>
+  <div id="page">
+    <h1>Delta Cache Demo</h1>
+    <br/>
+    <br/>
+    <button id="fetch-normal-button" class="btn btn-primary"/>Fetch dynamic content</button><br/>
+    <br/>
+    <button id="fetch-delta-button" class="btn btn-primary"/>Fetch dynamic content with delta encoding</button>
     <div id="columns">
-        <div class="column">
-            <div id="video-box">
-                <video controls muted></video>
-            </div>
-        </div>
-        <div class="column">
-            <h4 id="log-title">Log</h4>
-            <div id="log-box"></div>
-        </div>
+      <div class="column">
+        <h3>Content</h3>
+        <div id="content"></div>
+      </div>
+      <div class="column">
+        <h3>Log</h3>
+        <div id="log-box"></div>
+      </div>
     </div>
-    <p>The signaling and content server is written in Node.js and uses WebSockets. The front end JavaScript takes advantage of the WebRTC APIs, particularly PeerConnection. It also uses the MediaSource API to append video chunks onto an URL object.</p>
-    <p><b>This demo works only on the latest version of Chrome.</b></p>
-    <p><a href="https://github.com/wmsmacdonald/video2p">Code on GitHub</a></p>
-    <p>Contact me at<a href="mailto:wmsmacdonald@gmail.com"> wmsmacdonald@gmail.com</a></p>
-    <script src="javascripts/controller.js"></script>
-    <script src="javascripts/video/load.js"></script>
-    <script src="javascripts/peer/signaling.js"></script>
-    <script src="javascripts/peer/seeder.js"></script>
-    <script src="javascripts/peer/leecher.js"></script>
+  </div>
+
+  <script src="demo.js"></script>
 </body>
 </html>
