added link to code in demo

--- a/demo/public/demo.html
+++ b/demo/public/demo.html
@@ -16,6 +16,7 @@
   <div id="page">
     <h1>Delta Cache Demo</h1>
     <br/>
+    <p><a href="https://github.com/wmsmacdonald/delta-cache-browser/tree/master/demo">Code</a></p>
     <br/>
     <button id="fetch-normal-button" class="btn btn-primary"/>Fetch dynamic content</button><br/>
     <br/>
